Added in disabling to buttons, but not all. Added in editing to list name. Altered format and overall look of buttons.

--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -40,7 +40,9 @@ body {
 }
 
 /* HOME SCREEN CLASSES */
-.home_list_link {}
+.home_list_link {
+  cursor: pointer;
+}
 
 /* LIST SCREEN CONTROLS */
 #list_heading {}
