--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -103,14 +103,14 @@ body {
   left: 60%;
 }
 .list_item_card_toolbar {
-  position: absolute;
+  position: relative;
   left: 79%;
   width: 15%;
   top: 5%;
   height: 90%;
   display: grid;
   grid-template-columns: 33% 33% 33%;
-  column-gap: 15px;
+  column-gap: 0px;
 }
 .list_item_card_button {
   text-align: center;
